Updated users collections endpoint to take usernames instead of ids
